--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tracing = "0.1"
 tracing-subscriber = "0.2"
 strum = "0.21"
 strum_macros = "0.21"
+signatory = { version = "0.23.1", features = ["ed25519"] }
