Profiling data structures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ strum = "0.21"
 strum_macros = "0.21"
 rand = "0.8.4"
 signatory = { version = "0.23.1", features = ["ed25519"] }
+hdrhistogram = "6.0"
+chrono = "0.4"
