--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ rand = "0.8.4"
 signatory = { version = "0.23.1", features = ["ed25519"] }
 hdrhistogram = "6.0"
 chrono = "0.4"
+signal-hook = "0.3.10"
