--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ chrono = "0.4"
 signal-hook = "0.3.10"
 clap = "2.33.3"
 toml = "0.5.8"
+serde = "1.0.130"
+tokio = { version = "1.14.0", features = ["full"] }
