--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,8 @@ signal-hook = "0.3.10"
 clap = "2.33.3"
 toml = "0.5.8"
 serde = "1.0.130"
-tokio = { version = "1.14.0", features = ["full"] }
+tokio = "=0.2.0-alpha.6"
+tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
+tokio-net = { version = "=0.2.0-alpha.6", features = ["signal"] }
+tokio-timer = "=0.3.0-alpha.6"
+pin-project = "1.0.8"
