--- a/routes.toml
+++ b/routes.toml
@@ -1,3 +1,7 @@
-[routes]
-1 = "172.31.0.218"
-2 = "172.31.8.154"
+[routes.1]
+ip = "172.31.0.218"
+mac = "06:ed:a1:22:44:37"
+
+[routes.2]
+ip = "172.31.8.154"
+mac = "06:1d:e9:c1:3f:fd"
