--- a/routes.toml
+++ b/routes.toml
@@ -5,3 +5,7 @@ mac = "06:ed:a1:22:44:37"
 [routes.2]
 ip = "172.31.8.154"
 mac = "06:1d:e9:c1:3f:fd"
+
+[rib]
+ip = "10.100.1.10"
+mac = "02:00:00:ff:ff:00"
