--- a/routes.toml
+++ b/routes.toml
@@ -6,6 +6,14 @@ mac = "06:ed:a1:22:44:37"
 ip = "172.31.8.154"
 mac = "06:1d:e9:c1:3f:fd"
 
+[routes.3]
+ip = "172.31.14.201"
+mac = "06:4b:03:8b:83:3b"
+
+[routes.4]
+ip = "172.31.5.156"
+mac = "06:52:48:41:d2:d9"
+
 [rib]
-ip = "10.100.1.10"
-mac = "02:00:00:ff:ff:00"
+ip = "172.31.5.156"
+mac = "06:52:48:41:d2:d9"
