initial code draft

--- a/routes.toml
+++ b/routes.toml
@@ -14,6 +14,10 @@ mac = "06:4b:03:8b:83:3b"
 ip = "172.31.5.156"
 mac = "06:52:48:41:d2:d9"
 
+[default]
+ip = "172.31.14.201"
+mac = "06:4b:03:8b:83:3b"
+
 [rib]
 ip = "172.31.5.156"
 mac = "06:52:48:41:d2:d9"
