--- a/routes.toml
+++ b/routes.toml
@@ -9,6 +9,7 @@ mac = "06:1d:e9:c1:3f:fd"
 [routes.3]
 ip = "172.31.14.201"
 mac = "06:4b:03:8b:83:3b"
+# mac = "02:00:00:ff:ff:03" # UNCOMMENT ME FOR --dev mode
 
 [routes.4]
 ip = "172.31.5.156"
