--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -21,11 +21,8 @@ anyhow = "1.0"
 bincode = "1.2.1"
 lru = "0.7.0"
 capsule = "0.1"
-derivative = "2.2.0"
 tracing = "0.1"
 tracing-subscriber = "0.2"
-strum = "0.21"
-strum_macros = "0.21"
 rand = "0.8.4"
 signatory = { version = "0.23.1", features = ["ed25519"] }
 hdrhistogram = "6.0"
@@ -45,3 +42,4 @@ metrics-runtime = { version = "0.13", default-features = false }
 sha2 = "0.10.0"
 generic-array = "0.14.4"
 typenum = "1.12.0"
+client = { path = "../client" }
