--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -42,4 +42,4 @@ metrics-runtime = { version = "0.13", default-features = false }
 sha2 = "0.10.0"
 generic-array = "0.14.4"
 typenum = "1.12.0"
-client = { path = "../client" }
+gdp_client = { path = "../client" }
