--- a/crates/router/nuc.toml
+++ b/crates/router/nuc.toml
@@ -1,7 +1,7 @@
 app_name = "gdp"
 master_core = 0
 duration = 50000
-cores = [1]
+cores = [0, 1]
 
 [mempool]
     capacity = 65535
@@ -11,7 +11,7 @@ cores = [1]
     name = "eth1"
     device = "net_tap0"
     args = "iface=mytap"
-    cores = [0]
+    cores = [0, 1]
     rxd = 1024
     txd = 1024
 
@@ -19,6 +19,6 @@ cores = [1]
     name = "loc"
     device = "net_tap1"
     args = "iface=controltap"
-    cores = [0]
+    cores = [0, 1]
     rxd = 1024
     txd = 1024
